Added saving of documents, schema of data object versions
